# clonic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
.github/pages/: index.html
.github/workflows/: ci.yml  docs.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  LICENSE-MIT  README.md
core/src/: crypto_suite.rs  decode.rs  encode.rs  envelope.rs  error.rs  lib.rs  msg_type.rs  residency.rs
core/tests/: roundtrip.rs
crypto/: Cargo.toml
crypto/src/: aead.rs  error.rs  kem.rs  lib.rs  sign.rs  suite.rs
crypto/tests/: kat.rs
docs/: MANIFESTO.md  PROVISIONING.md  PROVISIONING_WORKFLOW.md  README.md  SUITE_SELECTION.md  TRANSPORT_GUIDE.md  WIRESHARK_DISSECTOR.md  ZCP_PROTOCOL_SPEC.md  ZONE_CONFIGURATION.md
identity/: Cargo.toml
identity/src/: cert.rs  error.rs  lib.rs  provisioning.rs
router/: Cargo.toml
router/src/: config.rs  lib.rs  metrics.rs  policy.rs  registry.rs  router.rs  violation.rs
src/: crypto_suite.rs  decode.rs  encode.rs  envelope.rs  error.rs  lib.rs  msg_type.rs  residency.rs  version.rs
tests/: roundtrip.rs
transport/: Cargo.toml
transport-tcp/: Cargo.toml
transport-tcp/benches/: tcp_benchmarks.rs
transport-tcp/src/: flow.rs  framing.rs  lib.rs  pool.rs  tcp.rs  tls.rs
transport-tcp/tests/: cross_platform.rs
transport/src/: config.rs  error.rs  framing.rs  lib.rs  registry.rs  transport.rs
