[package]
name = "clonic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wire protocol types and codec for the Zone Coordination Protocol (ZCP)"
repository.workspace = true
documentation = "https://docs.rs/clonic-core"
readme = "README.md"
keywords = ["iot", "wire-protocol", "embedded", "no_std", "zcp"]
categories = ["embedded", "encoding", "network-programming", "no-std"]

[features]
default = []
std = ["alloc"]
alloc = []
serde = ["dep:serde", "alloc"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
