[package]
name = "clonic-transport-tcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TCP/IP transport implementation for Zone Coordination Protocol (ZCP)"
repository.workspace = true
documentation = "https://docs.rs/clonic-transport-tcp"
keywords = ["transport", "tcp", "zcp", "networking"]
categories = ["network-programming"]

[features]
default = ["std"]
std = ["tokio", "tokio/full"]
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "webpki-roots"]

[dependencies]
clonic-transport = { path = "../transport", version = "0.1.2", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
